# ecflow-client-cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
example/ecflow_grpc_client/: CMakeLists.txt  main.cpp
example/node_client/: CMakeLists.txt  main.cpp
example/status_records_client/: CMakeLists.txt  main.cpp
example/suite_status/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/ecflow_client_grpc/: CMakeLists.txt  ecflow_client.grpc.pb.cc  ecflow_client.grpc.pb.h  ecflow_client.pb.cc  ecflow_client.pb.h
src/ecflow_client_grpc/ecflow_grpc_server/: CMakeLists.txt  ecflow_client_service_impl.cpp  ecflow_client_service_impl.h  main.cpp
src/ecflow_grpc/: CMakeLists.txt  ecflow_client.grpc.pb.h  ecflow_client.pb.h
src/ecflow_grpc/include/ecflow_client/: ecflow_client.grpc.pb.h  ecflow_client.pb.h
src/ecflow_grpc/src/: ecflow_client.grpc.pb.cc  ecflow_client.pb.cc
src/ecflow_grpc_server/: CMakeLists.txt
src/ecflow_grpc_server/src/: ecflow_client_service_impl.cpp  ecflow_client_service_impl.h  main.cpp
src/ecflow_util/: CMakeLists.txt
src/ecflow_util/include/ecflow_client/: ecflow_client.h
src/ecflow_util/src/: ecflow_client.cpp  ecflow_client.h  ecflow_client_standalone.cpp
src/ecflow_util_standalone/: CMakeLists.txt
src/ecflow_util_standalone/src/: ecflow_client_standalone.cpp
src/ecflow_watchman/: CMakeLists.txt
src/ecflow_watchman/src/: collector.cpp  collector.h  main.cpp  storer.cpp  storer.h  watch.cpp  watch.h  watch_all.cpp  watch_all.h
src/workflow_model/: CMakeLists.txt
src/workflow_model/include/ecflow_client/workflow_model/: bunch.h  node.h  node_status.h  node_type.h  node_variable.h  workflow_node.h
src/workflow_model/src/: bunch.cpp  bunch.h  node.cpp  node.h  node_status.cpp  node_status.h  node_type.h  node_variable.cpp  workflow_node.cpp  workflow_node.h
src/workflow_model/test/: CMakeLists.txt  test_bunch.cpp  test_node.cpp  test_node_status.cpp  test_node_variable.cpp  test_workflow_node.cpp
